--- a/Installer/package.yaml
+++ b/Installer/package.yaml
@@ -2,22 +2,18 @@ name:                Installer
 version:             0.1.0.0
 github:              "githubuser/Installer"
 license:             BSD-3-Clause
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2025 Author name here"
+author:              "ruzen42"
+maintainer:          "malledeferlive@gmail.com"
+copyright:           "2025 Jarolav Mihajlenko"
 
 extra-source-files:
 - README.md
 - CHANGELOG.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
+synopsis:            Installer for NurOS Linux 
+category:            System
 
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/Installer#readme>
+description:         Please see the README on GitHub at <https://github.com/NurOS-Linux/NurOS-Start#readme>
 
 dependencies:
 - base >= 4.7 && < 5
